TWINS-589 (#753)
* TWINS-589: fixed extracting dirs for delete method in storager

* TWINS-589: fixed extracting dirs for delete method in storager

* TWINS-589: updated build.gradle to use preview features

* TWINS-589: changed simple collections to concurrent

* TWINS-589: rewrite addAttachments using structured task scope